<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.iak_b3pip.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <ImageView
                android:id="@+id/image_tempe"
                android:layout_width="wrap_content"
                android:layout_height="165dp"
                android:cropToPadding="false"
                android:scaleType="centerCrop"
                android:src="@drawable/tempe_goreng" />

            <android.support.v7.widget.CardView
                android:id="@+id/content"
                android:layout_below="@id/image_tempe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/cardview_compat_inset_shadow">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="@string/pertanyaan10"/>

                    <RadioGroup
                        android:id="@+id/radio_button_grup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/radio_button_pertama"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:text="@string/jawaban10a" />

                        <RadioButton
                            android:id="@+id/radio_button_kedua"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:text="@string/jawaban10b" />

                        <RadioButton
                            android:id="@+id/radio_button_ketiga"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:text="@string/jawaban10c" />

                        <RadioButton
                            android:id="@+id/radio_button_keempat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:text="@string/jawaban10d" />

                    </RadioGroup>

                </LinearLayout>


            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_result"
        style="@style/BtnTheme"
        android:text="Next"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"/>


</RelativeLayout>
